--- a/index.html
+++ b/index.html
@@ -10,17 +10,16 @@
   <link rel="stylesheet" type="text/css" href="styles/bootstrap.min.css">
   <link href="styles/app.css" rel="stylesheet">
 
-  <title>Hello, world!</title>
+  <title>RPG</title>
 </head>
 
 <body>
 
   <div class="container">
     <h1>RPG SIM</h1>
-    <div class="form-group">
-      <input class="form-control" type="text" name="input" value=""/>
-    </div>
     <div class="well" id="log"></div>
+    <button id="atk" type="button" name="button" class="btn btn-primary">Attack</button>
+    <button id="heal" type="button" name="button" class="btn btn-success">Heal</button>
   </div>
 
   <!-- Optional JavaScript -->
