preparring to move code over to swift;

--- a/index.html
+++ b/index.html
@@ -16,10 +16,14 @@
 <body>
 
   <div class="container">
-    <h1>RPG SIM</h1>
-    <div class="well" id="log"></div>
-    <button id="atk" type="button" name="button" class="btn btn-primary">Attack</button>
-    <button id="heal" type="button" name="button" class="btn btn-success">Heal</button>
+    <div class="row">
+      <div class="col" style="height: 100%; overflow: scroll;">
+        <h1>RPG SIM</h1>
+          <div class="well" id="log"></div>
+          <button id="atk" type="button" name="button" class="btn btn-primary">Attack</button>
+        <button id="heal" type="button" name="button" class="btn btn-success">Heal</button>
+      </div>
+    </div>
   </div>
 
   <!-- Optional JavaScript -->
