--- a/index.html
+++ b/index.html
@@ -14,17 +14,25 @@
 </head>
 
 <body>
-
-  <div class="container">
+  <header>
+    <h1>RPG SIM</h1>
+  </header>
+  <div class="container main">
+    <div class="row">
+      <p id="hero"></p>
+      <p id="healer"></p>
+      <p id="boss"></p>
+    </div>
     <div class="row">
       <div class="col" style="height: 100%; overflow: scroll;">
-        <h1>RPG SIM</h1>
           <div class="well" id="log"></div>
-          <button id="atk" type="button" name="button" class="btn btn-primary">Attack</button>
-        <button id="heal" type="button" name="button" class="btn btn-success">Heal</button>
       </div>
     </div>
   </div>
+  <footer>
+    <button id="atk" type="button" name="button" class="btn btn-primary">Attack</button>
+    <button id="heal" type="button" name="button" class="btn btn-success">Heal</button>
+  </footer>
 
   <!-- Optional JavaScript -->
   <script src="js/jquery-2.1.4.min.js"></script>
