--- a/index.html
+++ b/index.html
@@ -7,7 +7,9 @@
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
   <!-- Bootstrap CSS -->
+  
   <link rel="stylesheet" type="text/css" href="styles/bootstrap/bootstrap.min.css">
+  <link href="styles/animate.css" rel="stylesheet">
   <link href="styles/app.css" rel="stylesheet">
 
   <title>RPG</title>
@@ -19,9 +21,26 @@
   </header>
   <div class="container main">
     <div class="row">
-      <p id="hero"></p>
-      <p id="healer"></p>
-      <p id="boss"></p>
+      <div class="character-block">
+        <p>Hero <span class="damage-taken">39</span> <span class="damage-dealt">50</span></p>
+        <div class="progress">
+          <div class="progress-bar" role="progressbar" style="width: 25%" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100"></div>
+        </div>
+      </div>
+      <!-- TODO: Add new character interaction later
+        <div class="character-block">
+        <p>Healer</p>
+        <div class="progress">
+          <div class="progress-bar bg-success" role="progressbar" style="width: 25%" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100"></div>
+        </div>
+      </div>
+      -->
+      <div class="character-block">
+        <p>Boss</p>
+        <div class="progress">
+          <div class="progress-bar bg-danger" role="progressbar" style="width: 100%" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100"></div>
+        </div>
+      </div>
     </div>
     <div class="row">
       <div class="col" style="height: 100%; overflow: scroll;">
