--- a/index.html
+++ b/index.html
@@ -22,7 +22,10 @@
   <div class="container main">
     <div class="row">
       <div class="character-block">
-        <p>Hero <span class="damage-taken">39</span> <span class="damage-dealt">50</span></p>
+        <p>
+          <strong>Hero: </strong>
+          <span class="damage-taken">39</span> <span class="damage-dealt">50</span>
+        </p>
         <div class="progress">
           <div class="progress-bar" role="progressbar" style="width: 25%" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100"></div>
         </div>
@@ -36,7 +39,10 @@
       </div>
       -->
       <div class="character-block">
-        <p>Boss</p>
+        <p>
+          <strong>Boss: </strong>
+          <span class="damage-taken">39</span> <span class="damage-dealt">50</span>
+        </p>
         <div class="progress">
           <div class="progress-bar bg-danger" role="progressbar" style="width: 100%" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100"></div>
         </div>
