#2, #3 - wire up health bars

--- a/index.html
+++ b/index.html
@@ -23,11 +23,11 @@
     <div class="row">
       <div class="character-block">
         <p>
-          <strong>Hero: </strong>
-          <span class="damage-taken">39</span> <span class="damage-dealt">50</span>
+          <strong>Hero </strong>
+          <!--<span class="damage-taken">39</span> <span class="damage-dealt">50</span>-->
         </p>
         <div class="progress">
-          <div class="progress-bar" role="progressbar" style="width: 25%" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100"></div>
+          <div class="progress-bar" id="hero-health" role="progressbar" style="width: 100%" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100"></div>
         </div>
       </div>
       <!-- TODO: Add new character interaction later
@@ -40,11 +40,11 @@
       -->
       <div class="character-block">
         <p>
-          <strong>Boss: </strong>
-          <span class="damage-taken">39</span> <span class="damage-dealt">50</span>
+          <strong>Boss </strong>
+          <!--<span class="damage-taken">39</span> <span class="damage-dealt">50</span>-->
         </p>
         <div class="progress">
-          <div class="progress-bar bg-danger" role="progressbar" style="width: 100%" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100"></div>
+          <div class="progress-bar bg-danger" id="boss-health" role="progressbar" style="width: 100%" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100"></div>
         </div>
       </div>
     </div>
