--- a/index.html
+++ b/index.html
@@ -57,6 +57,7 @@
   <footer>
     <button id="atk" type="button" name="button" class="btn btn-primary">Attack</button>
     <button id="heal" type="button" name="button" class="btn btn-success">Heal</button>
+    <button id="reset" type="button" name="button" class="btn btn-danger" style="display: none;">Reset</button>
   </footer>
 
   <!-- Optional JavaScript -->
