--- a/index.html
+++ b/index.html
@@ -24,8 +24,8 @@
       <div class="character-block">
         <p>
           <strong>Hero </strong>
-          <span class="damage-taken" id="hero-taken">0 damage taken</span>
-          <span class="damage-dealt" id="hero-dmg">0 damage dealt</span>
+          <span class="damage-taken animate fadeIn" id="hero-taken">0 damage taken</span>
+          <span class="damage-dealt animate fadeIn" id="hero-dmg">0 damage dealt</span>
         </p>
         <div class="progress">
           <div class="progress-bar" id="hero-health" role="progressbar" style="width: 100%" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100"></div>
@@ -42,8 +42,8 @@
       <div class="character-block">
         <p>
           <strong>Boss </strong>
-          <span class="damage-taken" id="boss-taken">0 damage taken</span>
-          <span class="damage-dealt" id="boss-dmg">0 damage dealt</span>
+          <span class="damage-taken animate fadeIn" id="boss-taken">0 damage taken</span>
+          <span class="damage-dealt animate fadeIn" id="boss-dmg">0 damage dealt</span>
         </p>
         <div class="progress">
           <div class="progress-bar bg-danger" id="boss-health" role="progressbar" style="width: 100%" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100"></div>
