#4 - Animated CSS actions

--- a/index.html
+++ b/index.html
@@ -22,8 +22,8 @@
   <div class="container main">
     <div class="row">
       <div class="character-block">
+        <p><strong>Hero</strong></p>
         <p id="hero-stats" class="animated zoomInDown">
-          <strong>Hero </strong>
           <span class="damage-taken" id="hero-taken">0 damage taken</span>
           <span class="damage-dealt" id="hero-dmg">0 damage dealt</span>
         </p>
@@ -40,8 +40,8 @@
       </div>
       -->
       <div class="character-block">
-        <p class="animated bounce">
-          <strong>Boss </strong>
+        <p><strong>Boss</strong></p>
+        <p class="animated zoomInDown delay-1s" id="boss-stats">
           <span class="damage-taken" id="boss-taken">0 damage taken</span>
           <span class="damage-dealt" id="boss-dmg">0 damage dealt</span>
         </p>
