--- a/jquery/index.html
+++ b/jquery/index.html
@@ -57,18 +57,13 @@
     </div>
   </div>
   <footer>
-    <!--<button id="atk" type="button" name="button" class="btn btn-primary">Attack</button> -->
-    <button id="heal" type="button" name="button" class="btn btn-success">Heal</button>
     <button id="reset" type="button" name="button" class="btn btn-danger" style="display: none;">Reset</button>    
       <button type="button" class="btn btn-secondary dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
       Actions
     </button>
     <div class="dropdown-menu">
-      <a id="atk" type="button" name="button" class="btn btn-primary">Attack</a>
-      <a class="dropdown-item" href="#">Another action</a>
-      <a class="dropdown-item" href="#">Something else here</a>
-      <div class="dropdown-divider"></div>
-      <a class="dropdown-item" href="#">Separated link</a>
+      <a id="atk" href="javascript:void(0)" class="dropdown-item">Attack</a>
+      <a id="heal" class="dropdown-item" href="javascript:void(0)">Heal</a>
     </div>
    
   </footer>
