--- a/assets/button.html
+++ b/assets/button.html
@@ -1,3 +1,3 @@
-<button id="btn-test" style="width: 100px; height: 100px; background-color: white; color: red;">
+<button id="btn-test" class="btn btn-primary">
   Attack
 </button>
